--- a/HawksGo2/app/src/main/AndroidManifest.xml
+++ b/HawksGo2/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.schools.robbinsdale.hawksgo">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,6 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".schoolClosings" />
+        <activity android:name=".Calendar"></activity>
     </application>
 
 </manifest>
