Additional UI Components, and Consistent Theme
Added functionality to the Calendar and Events Button. Also added some new assets that allow for gray and pink rounded edges on buttons and text boxes. Ensured the app theme stays consistent

--- a/HawksGo2/app/src/main/AndroidManifest.xml
+++ b/HawksGo2/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".schoolClosings" />
-        <activity android:name=".Calendar"></activity>
+        <activity android:name=".Calendar" />
+        <activity android:name=".LunchMenu"></activity>
     </application>
 
 </manifest>
